# acme-redirect

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  PKGBUILD  README.md
.github/workflows/: debian.yml  docker-release.yml  docker.yml  release.yml  rust.yml
contrib/confs/: acme-redirect.conf  example.com.conf
contrib/confs/certs.d/: example.com.conf
contrib/cron/: acme-redirect.cron
contrib/debian/: Dockerfile  build.sh
contrib/docs/: acme-redirect.1.scd  acme-redirect.conf.5.scd  acme-redirect.d.5.scd
contrib/openrc/: acme-redirect.initd
contrib/systemd/: acme-redirect-renew.service  acme-redirect-renew.timer  acme-redirect.service  acme-redirect.sysusers  acme-redirect.tmpfiles
debian/: postinst
examples/: boxxy.rs
src/: acme.rs  args.rs  cert.rs  chall.rs  check.rs  config.rs  daemon.rs  errors.rs  http_responses.rs  lib.rs  main.rs  persist.rs  renew.rs  sandbox.rs  status.rs  utils.rs
